--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,14 +2,46 @@
   <p>Today is currently: <span id="datetime"></span></p>
 
   <script>
+    'use strict'
+    const sensorTH = require('node-dht-sensor')
+    const Gpio = require('onoff').Gpio
+    sensorTH.initialize(11, 12)
+    const led = new Gpio(4, 'out')
+    exports.read = function read() {
+      let readout = sensorTH.read()
+      const tempandhumsData = {
+        temperature: readout.temperature.toFixed(2),
+        humidity: readout.humidity.toFixed(2)
+      };
+      console.log('current temperature: ' + readout.temperature.toFixed(2) + 'C, ' +
+        'current humidity: ' + readout.humidity.toFixed(2) + '%')
+      return tempandhumsData;
+    }
+
+    // Listen to the event triggered on CTRL+C, if it get triggered, Cleanly close the GPIO pin before exiting
+    process.on('SIGINT', () => {
+      if (interval) {
+        clearTimeout(interval);
+      }
+      if (interval1) {
+        clearTimeout(interval1);
+      }
+      if (interval2) {
+        clearTimeout(interval2);
+      }
+      if (interval3) {
+        clearTimeout(interval3);
+      }
+      console.log('Closing program. Returning to console.')
+      process.exit()
+    });
+
     var datetimerightnow = new Date();
     document.getElementById("datetime").innerHTML = datetimerightnow.toLocaleString();
-  </script>
-  <script>
-    const sensorT = require('node-dht-sensor')
-    sensorT.initialize(11, 12)
+    const sensorTH = require('node-dht-sensor')
+    sensorTH.initialize(11, 12)
     const interval = setInterval(() => {
-      let readout = sensorT.read()
+      let readout = sensorTH.read()
       document.getElementById("temperature").innerHTML = readout.temperature.toFixed(2);
       document.getElementById("humidity").innerHTML = readout.humidity.toFixed(2);
       console.log('Current temperature and humidity has been read for the web page.')
