current date and time method changed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,12 +1,5 @@
 <form id="currentdateandtime">
-  <p>Today is currently: <span id="datetime"></span></p>
-  <script>
-    function updatedatetime{
-      var datetimerightnow = new Date();
-      document.getElementById("datetime").innerHTML = datetimerightnow.toLocaleString();
-    }
-    setTimeout(updatedatetime, 1000);
-  </script>
+  <div id="time"></div>
 
   <script>
     'use strict'
