--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,23 @@
 <form id="currentdateandtime">
+  <script>
+    function updateClock() {
+    var now = new Date(), // current date
+        months = ['January', 'February', '...']; // you get the idea
+        time = now.getHours() + ':' + now.getMinutes(), // again, you get the idea
+
+        // a cleaner way than string concatenation
+        date = [now.getDate(), 
+                months[now.getMonth()],
+                now.getFullYear()].join(' ');
+
+    // set the content of the element with the ID time to the formatted string
+    document.getElementById('time').innerHTML = [date, time].join(' / ');
+
+    // call this function again in 1000ms
+    setTimeout(updateClock, 1000);
+    }
+    updateClock(); // initial call
+  </script>
   <div id="time"></div>
 
   <script>
