--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,70 +1,5 @@
 <form id="currentdateandtime">
-  <script>
-    function updateClock() {
-    var now = new Date(), // current date
-        months = ['January', 'February', '...']; // you get the idea
-        time = now.getHours() + ':' + now.getMinutes(), // again, you get the idea
-
-        // a cleaner way than string concatenation
-        date = [now.getDate(), 
-                months[now.getMonth()],
-                now.getFullYear()].join(' ');
-
-    // set the content of the element with the ID time to the formatted string
-    document.getElementById('time').innerHTML = [date, time].join(' / ');
-
-    // call this function again in 1000ms
-    setTimeout(updateClock, 1000);
-    }
-    updateClock(); // initial call
-  </script>
-  <div id="time"></div>
-
-  <script>
-    'use strict'
-    const sensorTH = require('node-dht-sensor')
-    const Gpio = require('onoff').Gpio
-    sensorTH.initialize(11, 12)
-    const led = new Gpio(4, 'out')
-    exports.read = function read() {
-      let readout = sensorTH.read()
-      const tempandhumsData = {
-        temperature: readout.temperature.toFixed(2),
-        humidity: readout.humidity.toFixed(2)
-      };
-      console.log('current temperature: ' + readout.temperature.toFixed(2) + 'C, ' +
-        'current humidity: ' + readout.humidity.toFixed(2) + '%')
-      return tempandhumsData;
-    }
-
-    // Listen to the event triggered on CTRL+C, if it get triggered, Cleanly close the GPIO pin before exiting
-    process.on('SIGINT', () => {
-      if (interval) {
-        clearTimeout(interval);
-      }
-      if (interval1) {
-        clearTimeout(interval1);
-      }
-      if (interval2) {
-        clearTimeout(interval2);
-      }
-      if (interval3) {
-        clearTimeout(interval3);
-      }
-      console.log('Closing program. Returning to console.')
-      process.exit()
-    });
-
-    const sensorTH = require('node-dht-sensor')
-    sensorTH.initialize(11, 12)
-    const interval = setInterval(() => {
-      let readout = sensorTH.read()
-      document.getElementById("temperature").innerHTML = tempandhumsData.temperature;
-      document.getElementById("humidity").innerHTML = tempandhumsData.humidity;
-      console.log('Current temperature and humidity has been read for the web page.')
-    }, 1000)
-  </script>
-
+  <span id='ct' ></span>
   <p>Currently, plant temperature is: <span id="temperature"></span></p>
   <p>Currently, plant humidity is: <span id="humidity"></span></p>
 </form>
