tried to add current time to page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <form id="currentdateandtime">
-  <span id='ct' ></span>
+  <p>Current time is: </p><span id='ct' ></span>
   <p>Currently, plant temperature is: <span id="temperature"></span></p>
   <p>Currently, plant humidity is: <span id="humidity"></span></p>
 </form>
