trying to make date-time location work

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,11 +9,14 @@
   }, 1000);
 </script>
 
+<div>
+  <center>
+    <p> Current time: </p>
+    <span id="dtText"></span>
+  </center>
+</div>
+
 <form method="POST" action="/inspection">
-  <div>
-      <p> Current time: </p>
-      <span id="dtText"></span>
-  </div>
   <div>
     <label for="worker_name">Worker name</label>
   </div>
