changed structure for current date and time

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,8 +9,7 @@
 
 <div>
   <center>
-    <p> Current time: </p>
-    <span id="dtText"></span>
+    <p> Current date and time is: <span id="dtText"></span></p>
   </center>
 </div>
 
