--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,10 @@
+<script>
+  setInterval(function(){
+	  var today = new Date();
+	  document.getElementById('dtText').innerHTML=today;
+  }, 1000);
+</script>
+
 <div>
   <center>
     <p> Current date and time is: <span id="dtText"></span></p>
