--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,7 +10,8 @@
 <form method="POST" action="/inspection">
   <div>
     <center>
-      <p> Current date and time is: <span id="dtText"></span></p>
+      <p> Current date and time is: </p>
+      <span id="dtText"></span>
     </center>
   </div>
   <div>
