--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,7 +13,7 @@
     <script defer src="js/main.js"></script>
 </head>
 
-<body onload="display_ct();">
+<body>
     <div class="container">
         <div class="header_title">
             <h1> Inspecting plants</h1>
