--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,6 +16,14 @@
     </center>
   </div>
   <div>
+    <center>
+      <p> Current temperature is: </p>
+      <span id="currentTemperature"></span>
+      <p> Current humidity is: </p>
+      <span id="currentHumidity"></span>
+    </center>
+  </div>
+  <div>
     <label for="worker_name">Worker name</label>
   </div>
   <div>
