--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,11 +33,11 @@
   <div>
     <select id="state" name="state">
       <option disabled> -- Choose a value -- </option>
-      <option value=1>1</option>
-      <option value=2>2</option>
-      <option value=3>3</option>
-      <option value=4>4</option>
-      <option value=5>5</option>
+      <option value=1>1 - Quite dead</option>
+      <option value=2>2 - Dying </option>
+      <option value=3>3 - Fine </option>
+      <option value=4>4 - Doing well </option>
+      <option value=5>5 - Doing very well </option>
     </select>
   </div>
   <div>
