--- a/views/home.hbs
+++ b/views/home.hbs
@@ -31,14 +31,16 @@
     <label for="state" required>Rate the state of the plant</label>
   </div>
   <div>
-    <select id="state" name="state">
-      <option disabled> -- Choose a value -- </option>
-      <option value=1>1 - Quite dead</option>
-      <option value=2>2 - Dying </option>
-      <option value=3>3 - Fine </option>
-      <option value=4>4 - Doing well </option>
-      <option value=5>5 - Doing very well </option>
-    </select>
+    <center>
+      <select id="state" name="state">
+        <option disabled> -- Choose a value -- </option>
+        <option value=1>1 - Quite dead</option>
+        <option value=2>2 - Dying </option>
+        <option value=3>3 - Fine </option>
+        <option value=4>4 - Doing well </option>
+        <option value=5>5 - Doing very well </option>
+      </select>
+    </center>
   </div>
   <div>
     <input type="submit" value="Submit">
