no padding on select on mobile

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -119,6 +119,8 @@ only screen and (max-width: 760px),
     /* Note, that padding also adds air above and below text. */
     padding-top: 4px;
     padding-bottom: 4px;
+    /* Don't pad select to the left on mobile */
+    padding-left: 0;
     /* Larger margin-right should make boxes align*/
     box-sizing: border-box;
   }
