--- a/public/style/main.css
+++ b/public/style/main.css
@@ -121,6 +121,7 @@ only screen and (max-width: 760px),
     padding-bottom: 4px;
     /* Larger margin-right should make boxes align*/
     box-sizing: border-box;
+    display: table;
   }
 
   /* Header for chart is removed */
