--- a/public/style/main.css
+++ b/public/style/main.css
@@ -207,7 +207,9 @@ only screen and (max-width: 760px),
 
   input[type=text] {
     text-align: left;
-    width: 100%;
+    padding-left: 16%;
+    padding-right: 16%;
+    width: 66%;
     box-sizing: border-box;
   }
 
