default to disabled value

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -31,8 +31,8 @@
     <label for="state" required>Rate the state of the plant</label>
   </div>
   <div>
-    <select id="state" name="state">
-      <option disabled> -- Choose a value -- </option>
+    <select id="state" name="state" required>
+      <option> -- Choose a value -- </option>
       <option value=1>1 - Quite dead</option>
       <option value=2>2 - Dying </option>
       <option value=3>3 - Fine </option>
