--- a/public/style/main.css
+++ b/public/style/main.css
@@ -108,6 +108,7 @@ only screen and (max-width: 760px)  {
   /* For workers assessment...*/
   textarea {
     width: 89%;
+    height: 4em;
     margin: 0px 0;
     box-sizing: border-box;
   }
