--- a/public/style/main.css
+++ b/public/style/main.css
@@ -107,6 +107,7 @@ only screen and (max-width: 760px)  {
 
   /* For workers assessment...*/
   textarea {
+    padding: 12px;
     width: 89%;
     height: 4em;
     margin: 0px 0;
