--- a/public/style/main.css
+++ b/public/style/main.css
@@ -172,7 +172,8 @@ only screen and (max-width: 760px)  {
 		left: 6px;
 		width: 45%; 
 		padding-right: 10px; 
-		white-space: nowrap;
+    white-space: nowrap;
+    word-wrap:break-word
 	}
 	
 	/*
