--- a/public/style/main.css
+++ b/public/style/main.css
@@ -173,7 +173,7 @@ only screen and (max-width: 760px)  {
 		width: 45%; 
 		padding-right: 10px; 
     white-space: nowrap;
-    word-wrap:break-word
+    word-wrap:break-word; 
 	}
 	
 	/*
