--- a/public/style/main.css
+++ b/public/style/main.css
@@ -138,7 +138,7 @@ only screen and (max-width: 760px)  {
     display: none;
   }
 
-	/* Force table to not be like tables anymore */
+	/* Force table to not be like tables anymore. Ensure, that too long words can be read in a new line.  */
 	table, thead, tbody, th, td, tr { 
     display: block; 
     word-wrap:break-word; 
