--- a/public/style/main.css
+++ b/public/style/main.css
@@ -101,6 +101,7 @@ only screen and (max-width: 760px)  {
   /* For worker name...*/
   input[type=text] {
     width: 89%;
+    height: 1em;
     padding: 12px;
     margin: 8px 0;
     box-sizing: border-box;
