--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,6 +32,7 @@
   </div>
   <div>
     <select id="state" name="state" required>
+      <option selected disabled hidden>-- Select a value --</option>
       <option value=1>1 - Quite dead</option>
       <option value=2>2 - Dying </option>
       <option value=3>3 - Fine </option>
