trying to fix required tag

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -28,11 +28,11 @@
     <textarea id="workers_assessment" name="workers_assessment" required></textarea>
   </div>
   <div>
-    <label for="state" required>Rate the state of the plant</label>
+    <label for="state">Rate the state of the plant</label>
   </div>
   <div>
     <select id="state" name="state" required>
-      <option selected disabled hidden>-- Select a value --</option>
+      <option selected disabled hidden value ="">-- Select a value --</option>
       <option value=1>1 - Quite dead</option>
       <option value=2>2 - Dying </option>
       <option value=3>3 - Fine </option>
