current temperature and humidity added to web page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,6 +13,10 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
+      <p> Current temperature is: </p>
+      <span id="temperaturetext"></span>
+      <p> Current humidity is: </p>
+      <span id="humiditytext"></span>
     </center>
   </div>
   <div>
