--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,10 +5,12 @@
   }, 1000);
 
   const sensoronpage = require('node-dht-sensor')
+  setInterval(function() {
   let readtosite = sensoronpage.read()
   sensoronpage.initialize(11, 12)
   document.getElementById("temperaturetext").innerHTML = readtosite.temperature.toFixed(2);
   document.getElementById("humiditytext").innerHTML = readtosite.temperature.toFixed(2);
+  })
 </script>
 
 <h1> Commit plant inspection </h1>
