current date and time

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,15 +1,7 @@
 <script>
-  'use strict'
-  const sensoronpage = require('node-dht-sensor')
-  sensoronpage.initialize(11, 12)
-
   setInterval(function(){
-	  var today = new Date()
-	  document.getElementById('dtText').innerHTML=today
-    console.log('starting to read to site')
-    let readtosite = sensoronpage.read()
-    document.getElementById('tText').innerHTML = readtosite.temperature.toFixed(2);
-    document.getElementById('hText').innerHTML = readtosite.temperature.toFixed(2);
+	  var today = new Date();
+	  document.getElementById('dtText').innerHTML=today;
   }, 1000);
 </script>
 
@@ -21,10 +13,6 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
-      <p> Current temperature is: </p>
-      <span id="tText"></span>
-      <p> Current humidity is: </p>
-      <span id="hText"></span>
     </center>
   </div>
   <div>
