--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,14 +6,17 @@
 </script>
 <script>
 exports.readOnSite = function readOnSite() {
+  console.log('sensor is being required')
   const sensor = require('../app/sensor')
   //  read the sensor values
+  console.log('sensor is being read')
   let readoutOnSite = sensor.read()
   //  readout contains two values: temperature and humidity, which will be used
   const dhtDataOnSite = {
     temperature: readoutOnSite.temperature.toFixed(2),
     humidity: readoutOnSite.humidity.toFixed(2)
   };
+  console.log('data is being written to site...')
   return dhtDataOnSite;
 }
 
