changed script on homepage

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,29 +2,24 @@
   setInterval(function(){
 	  var today = new Date();
 	  document.getElementById('dtText').innerHTML=today;
+    console.log('date is stored. ')
+    exports.readOnSite = function readOnSite() {
+    console.log('sensor is being required')
+    const sensor = require('../app/sensor')
+    //  read the sensor values
+    console.log('sensor is being read')
+    let readoutOnSite = sensor.read()
+    //  readout contains two values: temperature and humidity, which will be used
+    const dhtDataOnSite = {
+      temperature: readoutOnSite.temperature.toFixed(2),
+      humidity: readoutOnSite.humidity.toFixed(2)
+    };
+    console.log('data is being written to site...')
+    return dhtDataOnSite;
+    }
+    const currentthdata = sensor.readOnSite();
+    Document.getElementById('temponsite') = currentthdata.dhtDataOnSite.temperature;
   }, 1000);
-</script>
-<script>
-exports.readOnSite = function readOnSite() {
-  console.log('sensor is being required')
-  const sensor = require('../app/sensor')
-  //  read the sensor values
-  console.log('sensor is being read')
-  let readoutOnSite = sensor.read()
-  //  readout contains two values: temperature and humidity, which will be used
-  const dhtDataOnSite = {
-    temperature: readoutOnSite.temperature.toFixed(2),
-    humidity: readoutOnSite.humidity.toFixed(2)
-  };
-  console.log('data is being written to site...')
-  return dhtDataOnSite;
-}
-
-
-  const intervalSite = setInterval(
-    const currentthdata = sensor.readOnSite(); , 
-    2000);
-  Document.getElementById('temponsite') = currentthdata.dhtDataOnSite.temperature;
 </script>
 
 <h1> Commit plant inspection </h1>
