document instead of Document

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -12,7 +12,7 @@
       //  readout contains two values: temperature and humidity, which will be used
     };
     console.log('data is being written to site...')
-    Document.getElementById('temponsite').innerHTML = 'hello!';
+    document.getElementById('temponsite').innerHTML = 'hello!';
   }, 1000);
 </script>
 
