changed value temponsite

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -12,7 +12,7 @@
       //  readout contains two values: temperature and humidity, which will be used
     };
     console.log('data is being written to site...')
-    document.getElementById('temponsite').innerHTML = 'hello!';
+    document.getElementById('teText').innerHTML= "hello!";
   }, 1000);
 </script>
 
@@ -25,7 +25,7 @@
       <p> Current date and time is: </p>
       <span id="dtText"></span>
       <p> Current temperature is: </p>
-      <span id="temponsite"></span>
+      <span id="teText"></span>
     </center>
   </div>
   <div>
