--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,14 +2,15 @@
   setInterval(function(){
 	  var today = new Date();
 	  document.getElementById('dtText').innerHTML=today;
-        document.getElementById('teText').innerHTML= "hello!";
+    var readoutOnSite = "hello!"
+    document.getElementById('teText').innerHTML= readoutOnSite;
 
     exports.readOnSite = function readOnSite() {
       console.log('sensor is being required')
       const sensor = require('../app/sensor')
       //  read the sensor values
       console.log('sensor is being read')
-      let readoutOnSite = sensor.read()
+      let readoutOnite = sensor.read()
       //  readout contains two values: temperature and humidity, which will be used
     };
     console.log('data is being written to site...')
