datetime now shown on page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,10 @@
+<script>
+  setInterval(function(){
+	  var today = new Date();
+	  document.getElementById('dtText').innerHTML=today;
+  }, 1000);
+</script>
+
 <h1> Commit plant inspection </h1>
 
 <form method="POST" action="/inspection">
