lower line on dtText

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,8 +11,9 @@
   <!-- The information in this div is not used in POST, because mysql can default to the current timestamp. -->
   <div>
     <center>
-      <p> Current date and time is:
-      <span id="dtText"></span> </p> </center>
+      <p> Current date and time is: </p>
+      <span id="dtText"></span>
+    </center>
   </div>
   <div>
     <label for="worker_name">Worker name</label>
