Should now be cabale of showing current temperature and humidity

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,6 +13,17 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
+      <table>
+        <thead>
+          <tr>
+            <th>Temperature</th>
+            <th>Humidity</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+        <tbody id="currentdata">
+        </tbody>
+      </table>     
     </center>
   </div>
   <div>
