changed name for testing if table even works

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,7 +21,7 @@
             <th>Time</th>
           </tr>
         </thead>
-        <tbody id="currentdata">
+        <tbody id="myTable">
         </tbody>
       </table>     
     </center>
