changed back - issue is that table data is not being sent to currentdata table

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,7 +21,7 @@
             <th>Time</th>
           </tr>
         </thead>
-        <tbody id="myTable">
+        <tbody id="currentdata">
         </tbody>
       </table>     
     </center>
