use span instead of table

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,8 +21,7 @@
             <th>Time</th>
           </tr>
         </thead>
-        <tbody id="nowdata">
-        </tbody>
+        <span id="nowdata"></span>
       </table>     
     </center>
   </div>
