--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,7 +21,7 @@
             <th>Time</th>
           </tr>
         </thead>
-        <span id="nowdata"></span>
+        <tbody id="myTable"></tbody>
       </table>     
     </center>
   </div>
