--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,7 +21,7 @@
             <th>Time</th>
           </tr>
         </thead>
-        <tbody id="myTable"></tbody>
+        <tbody id="nowdata"></tbody>
       </table>     
     </center>
   </div>
