--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,17 +13,7 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
-      <table>
-        <thead>
-          <tr>
-            <th>Temperature</th>
-            <th>Humidity</th>
-            <th>Time</th>
-          </tr>
-        </thead>
-        <tbody id="nowdata">
-        </tbody>
-      </table>     
+      <div id="nowdata"></div>
     </center>
   </div>
   <div>
