table with nowdata

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,12 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
-      <div id="nowdata"></div>
+      <table>
+        <thead>
+          <p> hi </p>
+        </thead>
+        <tbody id="nowdata"></tbody>
+      </table>
     </center>
   </div>
   <div>
