style on currentdata table

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,7 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
-      <table>
+      <table style="border-color: black">
         <thead>
           <p> hi </p>
         </thead>
