select all from thnow and change title on table

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,7 +15,7 @@
       <span id="dtText"></span>
       <table>
         <thead>
-          <p> hi </p>
+          <p> Current temperature and humidity is: </p>
         </thead>
         <tbody id="nowdata"></tbody>
       </table>
