thnow is now mytable

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
         <thead>
           <p> Current temperature and humidity is: </p>
         </thead>
-        <tbody id="nowdata"></tbody>
+        <tbody id="myTable"></tbody>
       </table>
     </center>
   </div>
