tried to force add table values

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,20 @@
         <thead>
           <p> Current temperature and humidity is: </p>
         </thead>
-        <tbody id="thnow"></tbody>
+        <!-- Beginning of addition to thnow-->
+        <tbody id="thnow">
+          <tr>
+            <td>temperaturenow</td>
+            <td>humiditynow</td>
+          </tr>
+          {{#each Thnow}}
+          <tr>
+            <td>{{temperature}}</td>
+            <td>{{humidity}}</td>
+          </tr>
+          {{/each}}
+        <!-- End of addition to thnow-->
+        </tbody>
       </table>
     </center>
   </div>
