--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,7 +15,7 @@
       <span id="dtText"></span>
       <table>
         <thead>
-          <p> Current temperature and humidity is: </p>
+          <p> Latest measurement of temperature and humidity: </p>
         </thead>
         <tbody id="thnow">
           <tr>
