changed values in nowdata.hbs

--- a/views/nowdata.hbs
+++ b/views/nowdata.hbs
@@ -4,7 +4,7 @@
 </tr>
 {{#each Thnow}}
 <tr>
-  <td>{{temperature}}</td>
-  <td>{{humidity}}</td>
+  <td>{{temperaturenow}}</td>
+  <td>{{humiditynow}}</td>
 </tr>
 {{/each}}
