undo previous commit

--- a/views/nowdata.hbs
+++ b/views/nowdata.hbs
@@ -1,7 +1,10 @@
-{{#each Workers}}
 <tr>
-  <td>{{worker_name}}</td>
-  <td>{{state}}</td>
-  <td>{{workers_assessment}}</td>
+  <td>temperaturenow</td>
+  <td>humiditynow</td>
+</tr>
+{{#each Thnow}}
+<tr>
+  <td>{{temperaturenow}}</td>
+  <td>{{humiditynow}}</td>
 </tr>
 {{/each}}
