--- a/public/style/main.css
+++ b/public/style/main.css
@@ -181,8 +181,10 @@ only screen and (max-width: 760px)  {
 	/*
 	Label the data
 	*/
-	td:nth-of-type(1):before { content: "Temperature"; }
-	td:nth-of-type(2):before { content: "Humidity"; }
+  td:nth-of-type(1):before { content: "Temperature"; }
+  td:nth-of-type(2):before { content: "";}
+  td:nth-of-type(3):before { content: "Humidity"; }
+  td:nth-of-type(2):before { content: "";}
 	td:nth-of-type(3):before { content: "Time"; }
 	td:nth-of-type(4):before { content: "Worker name"; }
 	td:nth-of-type(5):before { content: "Plant state"; }
