--- a/public/style/main.css
+++ b/public/style/main.css
@@ -175,7 +175,7 @@ only screen and (max-width: 760px)  {
 		left: 6px;
 		width: 45%; 
 		padding-right: 10px; 
-    white-space: nowrap;
+    white-space: normal;
 	}
 	
 	/*
