added back workers assessment to see if text wrapping works

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -188,7 +188,7 @@ only screen and (max-width: 760px)  {
 	td:nth-of-type(5):before { content: "Time"; }
 	td:nth-of-type(6):before { content: "Worker name"; }
 	td:nth-of-type(7):before { content: "Plant state"; }
-	td:nth-of-type(8):before { content: "Assessment"; }
+	td:nth-of-type(8):before { content: "Workers assessment"; }
 }
 
 /**
