--- a/public/style/main.css
+++ b/public/style/main.css
@@ -9,7 +9,7 @@ p, h1, h2, a, label, span {
 }
 
 /**
- * Table
+ * Table design on pc and hide empty table cells
  */
 
 table, th, td {
@@ -17,13 +17,6 @@ table, th, td {
   border-collapse: collapse;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-/**
- * Hide empty table cells
- */
-
-table {
   empty-cells: hide;
 }
 
@@ -180,7 +173,7 @@ only screen and (max-width: 760px)  {
 		position: absolute;
 		/* Top/left values mimic padding */
 		top: 6px;
-		left: 0px;
+		left: 6px;
 		width: 45%; 
 		padding-right: 10px; 
     white-space: normal;
