custom styling for homepage table

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,7 @@
     <center>
       <p> Current date and time is: </p>
       <span id="dtText"></span>
-      <table>
+      <table style="border: 2px solid black; border-collapse: collapse; color: black; font-family: Arial, Helvetica, sans-serif; empty-cells: hide;">
         <thead>
           <p> Latest measurement of temperature and humidity: </p>
         </thead>
