hide empty cells

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
         <thead>
           <p> Latest measurement of temperature and humidity: </p>
         </thead>
-        <tbody id="thnow">
+        <tbody id="thnow" style="empty-cells: hide;">
           <tr>
         </tbody>
       </table>
