hide empty cells

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -144,6 +144,7 @@ only screen and (max-width: 760px)  {
 	table, thead, tbody, th, td, tr { 
     display: block; 
     word-wrap:break-word; 
+    empty-cells: hide;
 	}
 	
 	/* Hide table headers on mobile (but not display: none, as this gives bugs in css) */
@@ -210,6 +211,7 @@ only screen and (max-width: 760px)  {
   table {
     margin-left: 4.5%;
     margin-bottom: 3.5%;
+    empty-cells: hide;
   }
 
   input[type=text] {
