--- a/public/style/main.css
+++ b/public/style/main.css
@@ -16,7 +16,7 @@ table, th, td {
   border: 2px solid black;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  empty-cells: hide;
+/*  empty-cells: hide; */
 }
 
 /**
