Added table rows for labeling

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,6 +16,11 @@
       <table style="empty-cells: hide;">
         <thead>
           <p> Latest measurement of temperature and humidity: </p>
+          <tr>
+            <td> temperature </td>
+            <td> humidity </td>
+            <td> time </td>
+          </tr>
         </thead>
         <tbody id="thnow">
           <tr>
