hide extra tablestuff

--- a/views/inspection.hbs
+++ b/views/inspection.hbs
@@ -5,9 +5,9 @@
 <table>
     <thead>
         <tr>
-            <th></th>
+            <th style="visibility: hidden"></th>
             <th>Temperature</th>
-            <th></th>
+            <th style="visibility: hidden"></th>
             <th>Humidity</th>
             <th>Time</th>
             <th>Worker name</th>
