--- a/public/style/main.css
+++ b/public/style/main.css
@@ -134,7 +134,7 @@ only screen and (max-width: 760px)  {
     word-wrap:break-word; 
   }
   
-  /*
+  /* hide empty cells */
   table, th, td {
     empty-cells: hide;
   }
@@ -175,9 +175,9 @@ only screen and (max-width: 760px)  {
 	Label the data
 	*/
   td:nth-of-type(1):before { content: "Temperature"; }
-  td:nth-of-type(2):before { content: ""; border: none}
+  td:nth-of-type(2):before { content: ""; }
   td:nth-of-type(3):before { content: "Humidity"; }
-  td:nth-of-type(4):before { content: ""; border: none}
+  td:nth-of-type(4):before { content: ""; }
 	td:nth-of-type(5):before { content: "Time"; }
 	td:nth-of-type(6):before { content: "Worker name"; }
 	td:nth-of-type(7):before { content: "Plant state"; }
