deleted unused row

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,7 +14,7 @@
       <p> Current date and time is: </p>
       <span id="dtText"></span>
       <p> Latest measurement of temperature and humidity: </p>
-      <table style="border-bottom: 12px">
+      <table>
         <thead>
           <tr>
             <td> temperature </td>
