--- a/public/style/main.css
+++ b/public/style/main.css
@@ -206,7 +206,7 @@ only screen and (max-width: 760px)  {
   }
 
   table, th, td {
-    empty-cells: hide;
+   /* empty-cells: hide; */
   }
 
   input[type=text] {
