--- a/public/style/main.css
+++ b/public/style/main.css
@@ -158,7 +158,8 @@ only screen and (max-width: 760px)  {
     border-top: 1px solid;
 		border-bottom: 1px solid; 
 		position: relative;
-		padding-left: 50%; 
+    padding-left: 50%; 
+    empty-cells: hide;
 	}
 	
 	td:before { 
