--- a/public/style/main.css
+++ b/public/style/main.css
@@ -136,10 +136,6 @@ only screen and (max-width: 760px)  {
     empty-cells: hide;
   }
   
-  table, th, td {
-    empty-cells: hide;
-  }
-	
 	/* Hide table headers on mobile (but not display: none, as this gives bugs in css) */
 	thead tr { 
 		position: absolute;
@@ -150,6 +146,7 @@ only screen and (max-width: 760px)  {
   /* Each inspection is encapsulated as a table row. */
 	tr { 
     border: 5px solid; 
+    empty-cells: hide
   }
 	
 	td { 
