--- a/public/style/main.css
+++ b/public/style/main.css
@@ -133,6 +133,9 @@ only screen and (max-width: 760px)  {
 	table, thead, tbody, th, td, tr { 
     display: block; 
     word-wrap:break-word; 
+  }
+
+  table, th, td {
     empty-cells: hide;
   }
   
@@ -146,7 +149,6 @@ only screen and (max-width: 760px)  {
   /* Each inspection is encapsulated as a table row. */
 	tr { 
     border: 5px solid; 
-    empty-cells: hide
   }
 	
 	td { 
@@ -156,7 +158,6 @@ only screen and (max-width: 760px)  {
 		border-bottom: 1px solid; 
 		position: relative;
     padding-left: 50%; 
-    empty-cells: hide;
 	}
 	
 	td:before { 
