--- a/public/style/main.css
+++ b/public/style/main.css
@@ -151,8 +151,6 @@ only screen and (max-width: 760px)  {
 	td { 
 		/* Behave  like a "row" */
     border: none;
-    border-top: 1px solid;
-		border-bottom: 1px solid; 
 		position: relative;
     padding-left: 50%; 
     empty-cells: hide;
@@ -203,10 +201,6 @@ only screen and (max-width: 760px)  {
     margin-bottom: 3.5%;
   }
 
-  table, th, td {
-    empty-cells: hide;
-  }
-
   input[type=text] {
     text-align: left;
     width: 100%;
@@ -223,4 +217,10 @@ only screen and (max-width: 760px)  {
   select {
     box-sizing: border-box;
   }
+
+  td:nth-of-type(2):before { visibility: hidden; }
+  td:nth-of-type(4):before { visibility: hidden; }
+  td:nth-of-type(6):before { visibility: hidden; }
+  td:nth-of-type(8):before { visibility: hidden; }
+
 }
