--- a/public/style/main.css
+++ b/public/style/main.css
@@ -17,6 +17,7 @@ table, th, td {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
   empty-cells: hide;
+  border-bottom: 17px solid black;
 }
 
 /**
