fix one thing break another

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,7 +14,7 @@
       <p> Current date and time is: </p>
       <span id="dtText"></span>
       <p> Latest measurement of temperature and humidity: </p>
-      <table>
+      <table style ="border-bottom: 17px solid black;">
         <thead>
           <tr>
             <td> temperature </td>
