changed to be in main.css

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -20,6 +20,13 @@ table, th, td {
 }
 
 /**
+ * For table with live data
+ */
+#livetable {
+  border-bottom: 17px solid black;
+}
+
+/**
  *  Header
  */
 
